Added force overrides option

--- a/src/render/ui/components/SettingContainer/index.module.css
+++ b/src/render/ui/components/SettingContainer/index.module.css
@@ -32,6 +32,9 @@
 :global(.children-zx1) .settingContainer {
 	padding: 0;
 }
+:global(.children-zx1) .settingContainer .note {
+	margin: 0;
+}
 
 .settingContainer .labelRow {
 	display: flex;
