--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1568,6 +1568,10 @@ a.anchor:hover {
     max-width: 450px;
 }
 
+.VT-flex-box .separator {
+    max-width: calc(450px - 12px);
+}
+
 .VT-footer {
     position: relative;
     display: flex;
