--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -2307,8 +2307,6 @@ a:hover {
 
 .menu {
     position: absolute;
-    width: 100%;
-    /* height: 125%; */
 }
 
 .menu > .backdrop {
@@ -2356,6 +2354,15 @@ a:hover {
 }
 .menu.full > .menu-container {
     width: 100%;
+}
+.menu > .menu-container.bottom {
+    bottom: 100%;
+}
+.menu > .menu-container.left {
+    left: 0;
+}
+.menu > .menu-container.right {
+    right: 0;
 }
 
 .menu .menuItem {
