--- a/src/render/assets/css/input.module.css
+++ b/src/render/assets/css/input.module.css
@@ -60,6 +60,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+}
+* + .inputWrapper {
     margin-top: 0.25rem;
 }
 
