--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -519,6 +519,7 @@ p {
     padding: 5px 10px;
     z-index: 1;
     background-color: var(--background-secondary);
+    box-shadow: 0 5px 10px 5px var(--color-shadow);
 }
 
 .sidebar-bottom input, select {
@@ -1326,7 +1327,7 @@ body {
 }
 
 .container-f .header {
-    box-shadow: 0 1px 0 rgba(4, 4, 5, 0.2), 0 1.5px 0 rgba(6, 6, 7, 0.05), 0 2px 0 rgba(4, 4, 5, 0.05);
+    box-shadow: 0 0px 5px 0px var(--color-shadow);
     position: relative;
     font-weight: 500;
     padding: 0 16px;
