--- a/src/render/assets/css/preloader.module.css
+++ b/src/render/assets/css/preloader.module.css
@@ -13,7 +13,7 @@
     right: 0;
     left: 0;
     background-repeat: no-repeat;
-    background: var(--background-tertiary);
+    background-color: var(--background-tertiary);
     z-index: 3000;
     user-select: none;
     transition: opacity 1s ease;
