--- a/src/render/ui/Modals/VersionChooser.css
+++ b/src/render/ui/Modals/VersionChooser.css
@@ -25,7 +25,7 @@
 
 .container > .leftColumn .sidebar-region > .sidebar {
   width: 100%;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px;
 }
 
 .container > .middleColumn {
