--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -580,6 +580,11 @@ p {
     /* color: var(--brand-color) !important; */
 }
 
+.navItem.dragOver {
+    color: var(--text-disabled);
+    background-color: var(--background-modifier-hover);
+}
+
 .navItem.noAction {
     cursor: default;
 }
