--- a/src/render/ui/Modals/ShortcutsModal.css
+++ b/src/render/ui/Modals/ShortcutsModal.css
@@ -18,7 +18,7 @@
   gap: 6px;
   text-align: left;
   color: var(--text-normal);
-  font-size: 1.1rem;
+  font-size: 16px;
   font-weight: 600;
 }
 
@@ -39,7 +39,7 @@
   line-height: normal;
   text-align: left;
   color: var(--header-secondary);
-  font-size: .9rem;
+  font-size: 14px;
   font-weight: 500;
 }
 .sc-groups > .sc-group > .sc-container > .sc-icon {
@@ -51,6 +51,9 @@
 
 .sc-container kbd {
 	background-color: var(--background-modifier-accent);
+	box-shadow: var(--background-secondary) 0 3px 0;
+	transform: translateY(-2px);
+	transition: .05s ease;
 	padding: 4px 6px;
 	border-radius: 3px;
 	min-width: 24px;
@@ -60,8 +63,13 @@
 	text-align: center;
 	text-transform: capitalize;
 	color: var(--header-secondary);
-	font-size: 12px;
-	line-height: 110%;
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 100%;
+}
+.sc-container kbd:active {
+	box-shadow: var(--background-secondary) 0 1px 0;
+	transform: translateY(0);
 }
 .sc-container kbd:last-child {
 	margin-right: 0;
