--- a/src/render/ui/Modals/VersionChooser.css
+++ b/src/render/ui/Modals/VersionChooser.css
@@ -11,6 +11,7 @@
   flex: 0 0 auto;
   flex-direction: column;
   flex-shrink: 0;
+  overflow: hidden;
   background-color: var(--background-secondary);
 }
 
