--- a/src/render/components/Modals/VersionChooser.css
+++ b/src/render/components/Modals/VersionChooser.css
@@ -68,7 +68,7 @@
 }
 
 @media (max-width: 1150px) {
-  .container > .leftColumn {
+  #version-selector .container > .leftColumn {
     position: fixed;
     left: 0;
     top: 0;
@@ -79,19 +79,19 @@
     transition: transform var(--layer-transition) !important;
     will-change: transform;
   }
-  .container > .middleColumn {
+  #version-selector .container > .middleColumn {
     transition: margin var(--layer-transition) !important;
     will-change: margin;
     margin-left: 0;
   }
-  .container:not(.left-closed) > .middleColumn {
+  #version-selector .container:not(.left-closed) > .middleColumn {
     margin-left: 250px !important;
   }
-  .container:not(.left-closed) > .leftColumn {
+  #version-selector .container:not(.left-closed) > .leftColumn {
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
   }
-  .middleHeader .backButton {
+  #version-selector .middleHeader .backButton {
     display: flex;
   }
 }
