--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -12,9 +12,8 @@
   left: 0;
   opacity: 0;
   pointer-events: none;
-  overflow: auto;
-  transition: transform 0.25s cubic-bezier(.65,-0.3,0.3,1.3), opacity 0.35s ease;
-  z-index: 1;
+  overflow: hidden;
+  transition: all 0.25s cubic-bezier(.65,-0.3,0.3,1.3);
 }
 .TransitionWrap > *.open {
   opacity: 1;
@@ -32,6 +31,6 @@
   opacity: 0;
 }
 .TransitionWrap > *:not(.open):last-child {
-  transform: scale(0.93) translateZ(0px);
+  transform: scale(0.9) translateZ(0px);
   opacity: 0;
 }
